Fix alignment with close card button

--- a/static/scss/answers/interactive-map/VerticalFullPageMap.scss
+++ b/static/scss/answers/interactive-map/VerticalFullPageMap.scss
@@ -587,6 +587,7 @@
       position: relative;
       top: 1px;
       margin-left: auto;
+      display: flex;
     }
 
     &-closeCardButton {
@@ -595,6 +596,7 @@
       font-size: 16px;
       font-weight: bold;
       justify-content: flex-end;
+      padding-left: var(--yxt-base-spacing);
     }
 
     .HitchhikerCard-feedbackWrapper {
